--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,8 @@ body {
 }
 
 .container {
-    max-width: 1360px;
+    max-width: 1140px;
     margin: auto;
-    padding: 0 150px;
 }
 
 .container-fluid {
@@ -138,7 +137,10 @@ nav .container-fluid {
     width: 10px;
     margin-left: 15px;
 }
-/* Main Header */
+.mini-menu{
+    display: none;
+}
+/****************************************** Main Header **************************************/
 
 .main-header{
     display: flex;
@@ -184,8 +186,9 @@ nav .container-fluid {
 .main-header-img{
     width: 50%;
     max-width: 500px;
+    order: 0;
 }
-/* Clients */
+/********************************************* Clients ************************************/
 .clients{
     margin-top: 120px;
     margin-bottom: 40px;
@@ -195,9 +198,9 @@ nav .container-fluid {
     font-weight: 400;
     margin-bottom: 35px;
 }
-.client-items{
+.client-items ul{
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
 }
 .client-item{
     height: 100%;
@@ -209,7 +212,7 @@ nav .container-fluid {
     filter: grayscale(0);
 }
 
-/* features */
+/******************************************* features ****************************************/
 
 .features{
     display: flex;
@@ -224,7 +227,6 @@ nav .container-fluid {
     position: relative;
     
 }
-
 .feature-list{
     width: 60%;
 }
@@ -270,17 +272,17 @@ nav .container-fluid {
     border: 1px solid #fff;
     color: #fff;
 }
-/* content */
+/********************************************* content **********************************/
 .main-contents{
     margin-top: 100px;
 }
-
 .content1{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .content-text{
+    /* order: 0; */
     width: 70%;
 }
 .content-text h1{
@@ -297,6 +299,7 @@ nav .container-fluid {
 }
 .content-img{
     width: 50%;
+    order: 0;
 }
 
 .content2{
@@ -330,7 +333,7 @@ nav .container-fluid {
 .content-box h4 span{
     font-weight: 400;
 }
-/* comments */
+/******************************************** comments *******************************/
 .testimonial{
     
 }
@@ -371,7 +374,7 @@ nav .container-fluid {
     width: 90%;
     line-height: 30px;
 }
-/* Footer */
+/********************************************* Footer ***********************************/
 footer{
     background-color: #19191B;
     color: #fff;
@@ -457,3 +460,246 @@ footer{
 .footer-bottom .social-media i:hover{
     color: #5454D4;
 }
+
+
+
+
+
+
+
+
+
+
+
+@media(max-width: 1260px){
+    .container{
+        width: 1000px;
+    }
+}
+
+@media(max-width: 1060px){
+    .container{
+        width: 900px;
+    }
+    .main-header-text{
+        width: 70%;
+    }
+    .main-header-img{
+        width: 50%;
+    }
+    .features{
+        display: block;
+    }   
+    .feature-list{
+        width: 100%;
+    }
+    .list-box{
+        display: inline-block;
+        width: 46%;
+        background-color: #fff;
+        margin: 10px 10px;
+        /* padding: 26px 28px; */
+        border-radius: 6%;
+    }
+    .feature-text{
+        width: 100%;
+        margin-top: 50px;
+    }
+    .content-text h1{
+        width: 90%;
+        font-size: 45px;
+    }
+}
+
+@media(max-width: 920px){
+    .container{
+        width: 820px;
+    }
+    .main-header-text h2{
+        font-size: 50px;
+    }
+    .feature-text h1{
+        font-size: 40px;
+    }
+    .content-text h1{
+        font-size: 40px;
+    }
+    .testimonial h1{
+        font-size: 40px;
+    }
+}
+@media(max-width: 820px){
+    .container{
+        width: 720px;
+    }
+    .content-text h1{
+        font-size: 35px;
+    }
+    .testimonial-boxs{
+        flex-direction: column;
+    }
+    .Get-email{
+        flex-direction: column;
+    }
+}
+@media(max-width: 720px){
+    .container{
+        width: 600px;
+    }
+    .main-header{
+        flex-direction: column;
+    }
+    .main-header-text{
+        margin: auto;
+        width: 100%;
+        order: 2;
+        text-align: center;
+    }
+    .main-header-text h2{
+        margin: auto;
+    }
+    .main-header-text p{
+        margin: auto;
+        width: 80%;
+    }
+    .main-header-img{
+        width: 100%;
+        order: 1;
+        padding-bottom: 20px;
+    }
+    .client-item{
+        width: 100px;
+    }
+    .content1{
+        flex-direction: column;
+    }
+    .content-text{
+        order: 2;
+        width: 100%;
+    }
+    .content-text p{
+        width: 95%;
+    }
+    .content-img{
+        order:1;
+        width: 100%;
+    }
+    .content-container{
+        flex-direction: column;
+    }
+    .content-box{
+        width: 100%;
+        margin: auto;
+    }.Get-email h1{
+        font-size: 45px;
+    }
+    .footer-items{
+        flex-direction: column;     
+        text-align: center;
+    }
+    .footer-item{
+        margin-bottom: 10px;
+    }
+}
+
+@media(max-width: 600px){
+    .container{
+        width: 90%;
+    }
+    .container-fluid{
+        /* flex-direction: column; */
+        justify-content: space-between;
+    }
+    .nav-list{
+        display: none;
+    }
+    .main-header-text h2{
+        width: 100%;
+        font-size: 35px;
+    }
+    .mini-menu{
+        width: 40px;
+        display: block;
+    }
+    .main-header-img{
+        width: 100%;
+    }
+    .mini-menu button{
+        background: none;
+        border: none;
+    }
+    .client-items ul{
+        flex-direction: column;
+        display: block;  
+        width: 100%;
+        margin: auto;
+    }
+    .client-items ul li{
+        flex-direction: column;
+        display: inline-block;
+        padding: 5px;
+    }
+    .client-item{
+       
+    }
+    .list-box{
+        width: 95%;
+    }
+    .Get-email p{
+        width: 90%;
+    }
+    .Get-email input{
+        width: 90%;
+    }
+    .Get-email .get-start{
+        width: 9    0%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
